# mysql-ai

./: CMakeLists.txt  README.md
sql/: setup.sql
src/: ollama_embed.cc
